# life-restart-core

./: .gitignore  Cargo.toml  DEEP_INVESTIGATION_SUPPLEMENT.md  FIXES_SUMMARY.md  INVESTIGATION_REPORT.md  PYTHON_CHANGES_REQUIRED.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: simulation_benchmark.rs
python/life_restart_core/: __init__.py  __init__.pyi
src/: error.rs  lib.rs
src/achievement/: checker.rs  mod.rs
src/condition/: ast.rs  cache.rs  evaluator.rs  mod.rs  parser.rs  property_tests.rs
src/config/: achievement.rs  age.rs  event.rs  judge.rs  mod.rs  talent.rs
src/event/: mod.rs  processor.rs  property_tests.rs  selector.rs
src/property/: mod.rs  property_tests.rs  state.rs
src/simulator/: engine.rs  mod.rs  property_tests.rs  session.rs
src/talent/: mod.rs  processor.rs  property_tests.rs  replacer.rs
tests/: __init__.py  test_async_api.py  test_basic.py  test_equivalence.py
