[package]
name = "life-restart-core"
version = "0.2.1"
edition = "2021"
description = "High-performance life restart simulator core engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/qaz17899/life-restart-core"
keywords = ["game", "simulator", "pyo3", "python"]
categories = ["game-engines", "api-bindings"]

[lib]
name = "life_restart_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
once_cell = "1.20"
parking_lot = "0.12"
smallvec = { version = "1.13", features = ["union"] }
ahash = "0.8"

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"

[[bench]]
name = "simulation_benchmark"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
