[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "life-restart-core"
version = "0.1.1"
description = "High-performance life restart simulator core engine written in Rust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment :: Simulation",
]
keywords = ["game", "simulator", "rust", "performance"]

[project.urls]
Homepage = "https://github.com/qaz17899/life-restart-core"
Repository = "https://github.com/qaz17899/life-restart-core"
Issues = "https://github.com/qaz17899/life-restart-core/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "life_restart_core"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "pytest>=9.0.2",
]
